--- a/people.html
+++ b/people.html
@@ -74,7 +74,7 @@
 	    <tbody>
               <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/martin_web.png" height="100px" width="75px" class="img-rounded"/>
+		  <img src="images/people/martin_web.png" height="100px"  class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Prof. Martin Tygel
@@ -95,7 +95,7 @@
 	    <tbody>
               <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/borin_web.png" height="100px" width="75px" class="img-rounded"/>
+		  <img src="images/people/borin_web.png" height="100px"  class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  <a href="http://www.ic.unicamp.br/~edson" target="blank">Prof. Edson Borin</a>
@@ -131,7 +131,7 @@
 	    <tbody>
               <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/jorge_web.png" height="100px" width="75px" class="img-rounded"/>
+		  <img src="images/people/jorge_web.png" height="100px"  class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Dr. Jorge Henrique Faccipieri Junior
@@ -152,7 +152,7 @@
 	    <tbody>
               <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/tiago_web.png" height="100px" width="75px" class="img-rounded"/>
+		  <img src="images/people/tiago_web.png" height="100px"  class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Dr. Tiago Antonio Alves Coimbra
@@ -181,7 +181,7 @@
 	    <tbody>
               <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/dany_web.png" height="100px" width="75px" class="img-rounded"/>
+		  <img src="images/people/dany_web.png" height="100px"  class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Dany Rueda Serrano
@@ -202,7 +202,7 @@
 	    <tbody>
               <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/joao_web.png" height="100px" width="75px" class="img-rounded"/>
+		  <img src="images/people/joao_web.png" height="100px"  class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  João Renato Domingos do Sacramento
@@ -228,7 +228,7 @@
 	    <tbody>
               <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/caian_web.png" height="100px" width="75px" class="img-rounded"/>
+		  <img src="images/people/caian_web.png" height="100px" class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Caian Benedicto
@@ -253,7 +253,7 @@
 	    <tbody>
              <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/alcides_web.png" height="100px" width="75px" class="img-rounded"/>
+		  <img src="images/people/alcides_web.png" height="100px"  class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Alcides Goldoni Junior
@@ -280,7 +280,7 @@
             <tbody>
                  <tr>
            <td style="background:rgb(240,240,240);height:100px;width:90px">
-             <img src="images/people/paulo.png" height=100px" width="75px" class="img-rounded"/>
+             <img src="images/people/paulo.png" height=100px"  class="img-rounded"/>
                 </td>
            <td style="vertical-align:middle; background:rgb(240,240,240)">
           Paulo Geovani Almeida Torres
@@ -302,7 +302,7 @@
             <tbody>
                  <tr>
            <td style="background:rgb(240,240,240);height:100px;width:90px">
-             <img src="images/people/lucas_araujo.png" height="100px" width="75px" class="img-rounded"/>
+             <img src="images/people/lucas_araujo.png" height="100px"  class="img-rounded"/>
                 </td>
            <td style="vertical-align:middle; background:rgb(240,240,240)">
         Lucas de Magalhães Araújo
@@ -328,7 +328,7 @@
 	    <tbody>
              <tr>
        <td style="background:rgb(240,240,240);height:100px;width:90px">
-         <img src="images/people/joao.speglich.png" height="100px" width="75px" class="img-rounded"/>
+         <img src="images/people/joao.speglich.png" height="100px"  class="img-rounded"/>
 		</td>
 	   <td style="vertical-align:middle; background:rgb(240,240,240)">
 		João Henrique Speglich
@@ -350,7 +350,7 @@
 	    <tbody>
              <tr>
 	   <td style="background:rgb(240,240,240);height:100px;width:90px">
-         <img src="images/people/nicholas.png" height="100px" width="75px" class="img-rounded"/>
+         <img src="images/people/nicholas.png" height="100px"  class="img-rounded"/>
 		</td>
 	   <td style="vertical-align:middle; background:rgb(240,240,240)">
 		Nicholas Torres Okita
@@ -376,7 +376,7 @@
             <tbody>
                  <tr>
            <td style="background:rgb(240,240,240);height:100px;width:90px">
-             <img src="images/people/semFoto.png" height="100px" width="75px" class="img-rounded"/>
+             <img src="images/people/semFoto.png" height="100px"  class="img-rounded"/>
                 </td>
            <td style="vertical-align:middle; background:rgb(240,240,240)">
           Rafael Aparecido Granzotti
@@ -398,7 +398,7 @@
         <tbody>
              <tr>
        <td style="background:rgb(240,240,240);height:100px;width:90px">
-         <img src="images/people/taina.png" height="100px" width="75px" class="img-rounded"/>
+         <img src="images/people/taina.png" height="100px"  class="img-rounded"/>
             </td>
         <td style="vertical-align:middle; background:rgb(240,240,240)">
           Tainá Souza
@@ -427,7 +427,7 @@
           <tbody>
                <tr>
          <td style="background:rgb(240,240,240);height:100px;width:90px">
-           <img src="images/people/charles.png" height="100px" width="75px" class="img-rounded"/>
+           <img src="images/people/charles.png" height="100px"  class="img-rounded"/>
               </td>
          <td style="vertical-align:middle; background:rgb(240,240,240)">
           Charles Boulhosa Rodamilans
@@ -455,7 +455,7 @@
 	    <tbody>
              <tr>
        <td style="background:rgb(240,240,240);height:100px;width:90px">
-         <img src="images/people/gustavo.png" height="100px" width="75px" class="img-rounded"/>
+         <img src="images/people/gustavo.png" height="100px"  class="img-rounded"/>
 		</td>
        <td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Gustavo Barroso Dias Ignácio
@@ -473,7 +473,7 @@
 	    <tbody>
              <tr>
        <td style="background:rgb(240,240,240);height:100px;width:90px">
-		 <img src="images/people/ian_web.png" height="100px" width="75px" class="img-rounded"/>
+		 <img src="images/people/ian_web.png" height="100px"  class="img-rounded"/>
 		</td>
 	   <td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Ian Liu Rodrigues
@@ -495,7 +495,7 @@
 	    <tbody>
              <tr>
 	   <td style="background:rgb(240,240,240);height:100px;width:90px">
-	     <img src="images/people/jeferson_brunetta.png" height="100px" width="75px" class="img-rounded"/>
+	     <img src="images/people/jeferson_brunetta.png" height="100px"  class="img-rounded"/>
 		</td>
 	   <td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Jeferson Rech Brunetta
@@ -549,7 +549,7 @@
 	    <tbody>
              <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/thiago.dong.png" height="100px" width="75px" class="img-rounded"/>
+		  <img src="images/people/thiago.dong.png" height="100px"  class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Thiago Dong Chen
@@ -566,7 +566,7 @@
 	    <tbody>
              <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/jose_ribeiro.png" height="100px" width="75px" class="img-rounded"/>
+		  <img src="images/people/jose_ribeiro.png" height="100px"  class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  José Ribeiro Neto
@@ -587,7 +587,7 @@
 	    <tbody>
              <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/william.hayashida.png" height="100px" width="75px" class="img-rounded"/>
+		  <img src="images/people/william.hayashida.png" height="100px" class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Willian Massahiro Hayashida
@@ -604,7 +604,7 @@
 	    <tbody>
              <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/thamiris.png" height="100px" width="75px" class="img-rounded"/>
+		  <img src="images/people/thamiris.png" height="100px"  class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Thamiris Florindo Coelho
@@ -625,7 +625,7 @@
 	    <tbody>
              <tr>
 		<td style="background:rgb(240,240,240);height:100px;width:90px">
-		  <img src="images/people/matheus.rotta.png" height="100px" width="75px" class="img-rounded"/>
+		  <img src="images/people/matheus.rotta.png" height="100px"  class="img-rounded"/>
 		</td>
 		<td style="vertical-align:middle; background:rgb(240,240,240)">
 		  Matheus Rotta Alves
