--- a/people.html
+++ b/people.html
@@ -468,7 +468,7 @@
             <tbody>
                  <tr>
            <td style="background:rgb(240,240,240);height:100px;width:90px">
-             <img src="images/people/semFoto.png" height="100px"  class="img-rounded"/>
+             <img src="images/people/rafael.png" height="100px"  class="img-rounded"/>
                 </td>
            <td style="vertical-align:middle; background:rgb(240,240,240)">
           Rafael Aparecido Granzotti
