Correção de bugs

--- a/people.html
+++ b/people.html
@@ -752,7 +752,7 @@
     <td style="vertical-align:middle; background:rgb(240,240,240)">
       Murilo Guidetti Andrietta
                   <br/>Undergraduate Researcher 
-                  <br/>mgandrietta@ at gmail.com
+                  <br/>mgandrietta at gmail.com
     </td>
               </tr>
       </tbody>
