--- a/publications.html
+++ b/publications.html
@@ -63,6 +63,8 @@
 
     <!-------------------------------------------------------------------------------->
     <div class="container marketing">
+    	<div class="container">
+    
 	<div class="row">
 <h3 class="page-header">2018</h3>
     
@@ -724,9 +726,9 @@
 	SINGH, P. ; TYGEL, M. . On Some Analytic Functions In The Unit Disc.. Indian Journal of Pure and Applied Mathematics, India, v. 12, n.04, p. 513-520, 1981.
 	  </p>
 	</div>
-	</div>
+	</div><!-- Container -->
 
-    </div><!-- /.container -->
+    </div><!-- /.container Marketing-->
     <!-------------------------------------------------------------------------------->
 
     <!-- Bootstrap core JavaScript
