Edit Tygel and Gamboa informations

--- a/people.html
+++ b/people.html
@@ -86,8 +86,10 @@
               </tr>
 	    </tbody>
 	  </table>
-	  <p align="justify">Professor Emeritus of University of Campinas (UNICAMP)
-	Coordinator High Performance Geophysics (HPG) Laboratory  .</p>
+	  <p align="justify">Prof. Martin Tygel received M.S. (1976) and Ph.D. (1979) degrees in mathematics from Stanford University. 
+	  In 1983, he joined UNICAMP where he is now a Professor Emeritus of University of Campinas (UNICAMP). 
+	  In 2002, he received EAGE’s Conrad Schlumberger Award and was awarded the 2017 Honorary Lecturer for Latin America by the Society of Exploration Geophysicists (SEG). 
+	  Prof. Tygel has a long experience in carrying out projects which involves academia and the oil industry. His research interests are in methodologies and algorithms of seismic processing, imaging and inversion that have a sound basis on wave propagation and find practical application to exploration and monitoring of hydrocarbon reservoirs.</p>
         </div>
 
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
@@ -259,7 +261,7 @@
 	    </tbody>
 	  </table>
 	  <p align="justify">
-	    M.Sc. at the Program of Petroleum Science and
+	    PhD at the Program of Petroleum Science and
 	    Engineering at University of Campinas (FEM/UNICAMP).
         </div>
       </div>
