Remove Mauricio informations

--- a/people.html
+++ b/people.html
@@ -661,7 +661,7 @@
     </table>
    </div>
                  
-    <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+  <!--   <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
     <table class="table">
       <tbody>
              <tr>
@@ -672,13 +672,13 @@
       Mauricio Israel Guizada Duran
               <br/>Geophysics M.Sc. Student
                   <br/> mauricioguizada at hotmail.com
-     <!-- <br/><a href="" target="_blank">Lattes</a>-->
+     <br/><a href="" target="_blank">Lattes</a>
     </td>
               </tr>
       </tbody>
     </table>
    </div>     
-
+-->
 
       </div>
       <!--..........................................................................-->
