Added new projects informations

--- a/projects.html
+++ b/projects.html
@@ -68,6 +68,24 @@
 
 <p><h2 class="page-header">Ongoing Projects</h2></p>
 <div class="row">
+<div class="col-sm-12 col-md-12 col-lg-12 col-xl-12"><table class="table"><tbody>
+          <tr>
+	     <td style="vertical-align:middle;height:100px;width:90px">
+            <img id="project_image" src="images/partners/petrobras.png">
+	     </td>
+	     <td style="vertical-align:middle;">
+	      <h4>Algorithms and methods for diffraction separation in the pre-stack domain and extraction of anisotropic parameters in HPC systems<h4>
+	     </td>
+	    </tr>
+	    <tr>
+	     <td colspan="2">
+              <p align="justify">The main objectives of the project are research, development and practical application of diffraction separation, 5D regularization in the pre-stack domain and extraction of kinematic parameters related to anisotropic parameters. The obtained results, with direct application in industry, will have a significant impact on migration velocity model validation in complex geology, such as those found in pre-salt reservoirs.</p>
+      	</td>
+	    </tr>
+        </tbody></table></div>
+        
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12"><table class="table"><tbody>
+        
 		<div class="col-sm-12 col-md-12 col-lg-12 col-xl-12"><table class="table"><tbody>
           <tr>
 	     <td style="vertical-align:middle;height:100px;width:90px">
